2005-02-27  Daniel Macks  <dmacks@netspace.org>

	* VirtPackage.pm: add Homepage to the install script failure for
	virtual packages.

2005-02-26  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Validation.pm: check RuntimeVars for DYLD_LIBRARY_PATH: %p/lib
	and error if it exists.

2005-02-25  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: add DescDetail to the install script failure for
	virtual packages.

2005-02-25  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Validation.pm: added runtimedepends and addshlibdeps to accepted list
	of fields, and added addshlibdeps to boolean list.
	* PkgVersion.pm, Shlibs.pm: Added some maintainer output

2005-02-25  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Engine.pm, PkgVersion.pm: Adding maintainer mode, -m|--maintainer,
	which will enable extra output for maintainers and will self validate
	the info and deb files.

2005-02-25  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: add return values for validate_*_file

2005-02-25  Daniel Macks  <dmacks@netspace.org>

	* VirtPackage.pm: Make InstallScript output stand out better

2005-02-25  Daniel Macks  <dmacks@netspace.org>

	* Package.pm: More-compatible syntax for open().

2005-02-24  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: When a compile fails, point the user at the FAQ
	and mailing lists *before* having them e-mail the maintainer
	directly.

2005-02-23  Daniel Macks  <dmacks@netspace.org>

	* CLI.pm: Added new "intro" param to prompt_selection
	* Configure.pm, Engine.pm, PkgVersion.pm, SelfUpdate.pm: use new
	"intro" param to prompt_selection

2005-02-24  Dave Morrison  <dmrrsn@users.sourceforge.net>

	*VirtPackage.pm: perl packages now Provide digest-pm (when >= 5.8.0)
	
2005-02-23  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Engine.pm, Package.pm, SelfUpdate.pm, Shlibs.pm: refactored some
	of the code so that there's less duplication.  Shlibs.pm now
	ISA Package.pm.
